kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camel-rest-status
  labels:
    app: camel-rest-status
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camel-rest-status
  template:
    metadata:
      labels:
        app: camel-rest-status
    spec:
      containers:
      - name: camel-rest-status
        image: quay.io/mcaballol/camel-rest-status:r1
        imagePullPolicy: Always 
        ports:
        - containerPort: 8080
