kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector:
    app: camel-rest-status
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
