kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camel-rest-status
spec:
  rules:
  - http:
      paths:
      - path: /camel/status
        pathType: Prefix
        backend:
          service:
            name: camel-rest-status
            port:
              number: 80
