kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: camel-rest-status
  labels:
    app: camel-rest-status
spec:
  to:
    kind: Service
    name: example-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
